[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/characters/character_base.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/sounds/sfx_witch_damage_taken1_jdymusic.mp3" type="AudioStream" id=2]
[ext_resource path="res://assets/sounds/sfx_witch_damage_taken2_jdymusic.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/sfx_witch_death_jdymusic.mp3" type="AudioStream" id=4]
[ext_resource path="res://scenes/characters/witch.gd" type="Script" id=5]
[ext_resource path="res://scenes/characters/witch_states/witch_shoot.gd" type="Script" id=6]
[ext_resource path="res://assets/models/witch_animations_frank_ilikethepixies/witch_animations_Frank_Ilikethepixies.gltf" type="PackedScene" id=7]
[ext_resource path="res://assets/sounds/sfx_magic_missile_jdymusic.mp3" type="AudioStream" id=8]

[sub_resource type="Shader" id=11]
code = "shader_type spatial;

render_mode unshaded, shadows_disabled;

//uniform vec4 border_color : hint_color = vec4(.0, .0, .0, 1.);
uniform vec4 background_color : hint_color = vec4(.0, .0, .0, 1.);
uniform vec4 progress_color : hint_color = vec4(.0, 1., .0, 1.);
uniform float progress_value : hint_range(0.0, 1.0, 0.02) = .5;

void vertex()
{
	MODELVIEW_MATRIX = INV_CAMERA_MATRIX * mat4(CAMERA_MATRIX[0],CAMERA_MATRIX[1],CAMERA_MATRIX[2],WORLD_MATRIX[3]);
}

void fragment()
{
	vec2 border = vec2(0.01, 0.1);

	vec2 mask2 = step(border, UV) * step(UV, 1.0-border);
    float mask = mask2.x*mask2.y;

	//float progress = .5;
    float blend = ((UV.x - progress_value) <= 0.0 ? 1.0 : 0.0) * mask;
    vec4 fragColor = progress_color*blend + background_color*(1.0-blend);
	ALBEDO = fragColor.rgb;

}"

[sub_resource type="ShaderMaterial" id=23]
shader = SubResource( 11 )
shader_param/background_color = Color( 0, 0, 0, 1 )
shader_param/progress_color = Color( 0, 1, 0, 1 )
shader_param/progress_value = 0.5

[sub_resource type="QuadMesh" id=12]
resource_local_to_scene = true
material = SubResource( 23 )
size = Vector2( 1, 0.1 )

[sub_resource type="SpatialMaterial" id=20]
resource_local_to_scene = true
albedo_color = Color( 0.623529, 0.054902, 0.854902, 1 )

[sub_resource type="CapsuleMesh" id=15]
resource_local_to_scene = true
material = SubResource( 20 )
radius = 0.5

[sub_resource type="SpatialMaterial" id=21]
albedo_color = Color( 0.00392157, 0.00392157, 0.00392157, 1 )

[sub_resource type="SphereMesh" id=16]
material = SubResource( 21 )
radius = 0.1
height = 0.2

[sub_resource type="CylinderMesh" id=17]
top_radius = 0.2
bottom_radius = 0.1
height = 0.2

[sub_resource type="SpatialMaterial" id=22]
albedo_color = Color( 0.12549, 0.12549, 0.12549, 1 )

[sub_resource type="CylinderMesh" id=19]
material = SubResource( 22 )
top_radius = 0.0
bottom_radius = 0.5
height = 0.5

[node name="Witch" instance=ExtResource( 1 )]
script = ExtResource( 5 )
allowed_interactable_types = [ "mana" ]

[node name="Shoot" type="Node" parent="StateMachine" index="4"]
script = ExtResource( 6 )
deny_interaction_sound = NodePath("../../DenyInteractionSound")
fire_from_position = NodePath("../../Position3D")
shoot_sound = NodePath("../../ShootSound")

[node name="OutlineHelper3D" parent="." index="3"]
mesh_instances_to_outline = [ NodePath("../WitchAnimations_Frank_Ilikethepixies/Armature/Skeleton/witch") ]

[node name="HealthBar" parent="." index="4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.29247, 0 )
mesh = SubResource( 12 )

[node name="Damaged1" type="AudioStreamPlayer3D" parent="DamagedRandomAudioStreamPlayer3D" index="0"]
stream = ExtResource( 2 )
unit_db = 12.0
bus = "SoundFx"

[node name="Damaged2" type="AudioStreamPlayer3D" parent="DamagedRandomAudioStreamPlayer3D" index="1"]
stream = ExtResource( 3 )
unit_db = 12.0
bus = "SoundFx"

[node name="TempWitchMeshInstance" type="MeshInstance" parent="." index="7"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
visible = false
mesh = SubResource( 15 )

[node name="Eye1" type="MeshInstance" parent="TempWitchMeshInstance" index="0"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.165072, -0.479389, -0.61483 )
mesh = SubResource( 16 )
skeleton = NodePath("../..")

[node name="Eye2" type="MeshInstance" parent="TempWitchMeshInstance" index="1"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.165, -0.479389, -0.615 )
mesh = SubResource( 16 )
skeleton = NodePath("../..")

[node name="Mouth" type="MeshInstance" parent="TempWitchMeshInstance" index="2"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -0.39661, -0.28777 )
mesh = SubResource( 17 )
skeleton = NodePath("../..")

[node name="MeshInstance" type="MeshInstance" parent="TempWitchMeshInstance" index="3"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -5.16802e-08, -1.1823 )
mesh = SubResource( 19 )

[node name="DeathSound" type="AudioStreamPlayer3D" parent="." index="9"]
stream = ExtResource( 4 )
unit_db = 12.0
bus = "SoundFx"

[node name="WitchAnimations_Frank_Ilikethepixies" parent="." index="12" instance=ExtResource( 7 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="witch" parent="WitchAnimations_Frank_Ilikethepixies/Armature/Skeleton" index="0"]
layers = 3

[node name="AnimationPlayer" parent="WitchAnimations_Frank_Ilikethepixies" index="1"]
autoplay = "Idle"

[node name="Position3D" type="Position3D" parent="." index="13"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4789, 2.22868, -2.5161 )

[node name="SpotLight" type="SpotLight" parent="." index="14"]
transform = Transform( 1, 0, 0, 0, -0.5, 0.866025, 0, -0.866025, -0.5, 0, 4, -2 )
visible = false
light_energy = 0.5
spot_range = 3.0
spot_angle = 33.4782

[node name="character_selection_matrix" parent="." index="15"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.32902, 0 )

[node name="SelectionMarkerRemoteTransform" parent="." index="16"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.32902, 0 )

[node name="ShootSound" type="AudioStreamPlayer3D" parent="." index="17"]
stream = ExtResource( 8 )
unit_db = 24.0
bus = "SoundFx"

[connection signal="interaction_about_to_start" from="StateMachine/Walk" to="." method="_on_Walk_interaction_about_to_start"]
[connection signal="animation_finished" from="WitchAnimations_Frank_Ilikethepixies/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="WitchAnimations_Frank_Ilikethepixies"]
